--- a/Frontend/components/VerticalProgressBar.module.css
+++ b/Frontend/components/VerticalProgressBar.module.css
@@ -19,6 +19,8 @@
     width: 20px;
     margin: auto;
     border-radius: 25px;
+    background-color: rgb(210, 3, 203);
+    box-shadow: 0px 0px 20px 2px rgba(90, 0, 87, 0.86);
 }
 
 @keyframes barAnimation {
@@ -37,12 +39,21 @@
     width: 50px;
     height: 50px;
     border-radius: 100%;
-    background-color: rgb(0, 50, 94);
+}
+
+.dotDone {
+    background-color: rgb(3, 252, 52);
+    box-shadow: 0px 0px 20px 2px rgba(112, 255, 7, 0.86);
+}
+
+.dotMissing {
+    background-color: rgb(3, 252, 227);
+    box-shadow: 0px 0px 20px 2px rgba(3, 252, 227, 0.86);
 }
 
 .endFlag {
     position: absolute;
     top: 600px;
-    transform: translateX(-50%);
+    transform: translateX(-30px);
     width: 80px;
 }
