--- a/Frontend/components/VerticalProgressBar.module.css
+++ b/Frontend/components/VerticalProgressBar.module.css
@@ -23,6 +23,11 @@
     box-shadow: 0px 0px 20px 2px rgba(90, 0, 87, 0.86);
 }
 
+.barComplete {
+    background-color: rgb(165, 255, 135);
+    box-shadow: 0px 0px 20px 2px rgba(107, 249, 60, 0.86);
+}
+
 @keyframes barAnimation {
     from {
         height: 0;
@@ -53,7 +58,6 @@
 
 .endFlag {
     position: absolute;
-    top: 600px;
     transform: translateX(-30px);
     width: 80px;
 }
