--- a/Frontend/styles/globals.css
+++ b/Frontend/styles/globals.css
@@ -12,6 +12,8 @@ body {
     --bs-body-bg: rgb(33, 33, 33) !important;
     --bs-body-color: white !important;
     --bs-card-color: !important;
+    --flagsColor: #bbb;
+    --flagsShadowColor: none
 }
 
 a {
