--- a/Frontend/components/Box.module.css
+++ b/Frontend/components/Box.module.css
@@ -1,10 +1,12 @@
 .cardBox {
     color: black;
     height: 100%;
+
 }
 
 /* Handle rotation */
 .flipCard {
+    cursor: pointer;
     background-color: transparent;
     width: 100%;
     perspective: 1000px;
