--- a/Frontend/components/Box.module.css
+++ b/Frontend/components/Box.module.css
@@ -45,3 +45,28 @@
     color: black;
     transform: rotateX(180deg);
 }
+
+.imageBox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.imageElement {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+}
