--- a/Frontend/components/Flag.module.css
+++ b/Frontend/components/Flag.module.css
@@ -1,3 +1,9 @@
+.flagBox {
+    height: 200px !important;
+    width: 150px !important;
+}
+
+
 .mainFlag {
     /* */
     height: 150px;
@@ -76,4 +82,10 @@
 
 .image {
     z-index: 1;
+    margin-top: -20px;
+}
+
+.title {
+    color: black;
+    margin-top: 30px;
 }
