--- a/Frontend/components/SelectableFlag.module.css
+++ b/Frontend/components/SelectableFlag.module.css
@@ -10,9 +10,9 @@
     width: 150px;
     z-index: 0;
     position: relative;
-    border-left: 1px solid var(--flagsColor);
-    border-top: 1px solid var(--flagsColor);
-    border-right: 1px solid var(--flagsColor);
+    border-left: var(--flagsBorderSize) solid var(--flagsBorderColor);
+    border-top: var(--flagsBorderSize) solid var(--flagsBorderColor);
+    border-right: var(--flagsBorderSize) solid var(--flagsBorderColor);
     text-align: center;
     line-height: 100px;
     font-size: 30px;
@@ -26,16 +26,16 @@
     content: "";
     position: absolute;
     height: 50%;
-    width: 52%;
-    left: -1px;
+    width: 53%;
+    left: calc(var(--flagsBorderSize) * -1);
     /*width of border*/
     bottom: -30px;
     z-index: -1;
     -webkit-transform: skewY(-20deg);
     transform: skewY(-20deg);
     background-color: var(--flagsColor);
-    border-bottom: 1px solid var(--flagsColor);
-    border-left: 1px solid var(--flagsColor);
+    border-bottom: var(--flagsBorderSize) solid var(--flagsBorderColor);
+    border-left: var(--flagsBorderSize) solid var(--flagsBorderColor);
     box-shadow: var(--flagsShadowColor);
 }
 
@@ -43,16 +43,16 @@
     content: "";
     position: absolute;
     height: 50%;
-    width: 52%;
-    right: -1px;
+    width: 53%;
+    right: calc(var(--flagsBorderSize)* -1);
     /*width of border*/
     bottom: -30px;
     z-index: -1;
     -webkit-transform: skewY(20deg);
     transform: skewY(20deg);
     background-color: var(--flagsColor);
-    border-bottom: 1px solid var(--flagsColor);
-    border-right: 1px solid var(--flagsColor);
+    border-bottom: var(--flagsBorderSize) solid var(--flagsBorderColor);
+    border-right: var(--flagsBorderSize) solid var(--flagsBorderColor);
     box-shadow: var(--flagsShadowColor);
 }
 
