--- a/Frontend/styles/globals.css
+++ b/Frontend/styles/globals.css
@@ -12,7 +12,9 @@ body {
     --bs-body-bg: rgb(33, 33, 33) !important;
     --bs-body-color: white !important;
     --bs-card-color: !important;
-    --flagsColor: #bbb;
+    --flagsColor: rgb(204, 16, 16);
+    --flagsBorderColor: rgb(212, 175, 55);
+    --flagsBorderSize: 4px;
     --flagsShadowColor: none
 }
 
