--- a/Frontend/components/Flag.module.css
+++ b/Frontend/components/Flag.module.css
@@ -3,6 +3,11 @@
     width: 150px !important;
 }
 
+.dialogTools {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
 
 .mainFlag {
     /* */
@@ -10,54 +15,76 @@
     width: 150px;
     z-index: 0;
     position: relative;
-    border-left: 1px solid #bbb;
-    border-top: 1px solid #bbb;
-    border-right: 1px solid #bbb;
+    border-left: var(--flagsBorderSize) solid var(--flagsBorderColor);
+    border-top: var(--flagsBorderSize) solid var(--flagsBorderColor);
+    border-right: var(--flagsBorderSize) solid var(--flagsBorderColor);
     text-align: center;
     line-height: 100px;
     font-size: 30px;
-    background-color: #bbb;
+    background-color: var(--flagsColor);
     animation-name: flagAnimationReverse;
     animation-duration: 0.2s;
+    box-shadow: var(--flagsShadowColor);
 }
 
 .mainFlag:before {
     content: "";
     position: absolute;
     height: 50%;
-    width: 52%;
-    left: -1px;
+    width: 53%;
+    left: calc(var(--flagsBorderSize) * -1);
     /*width of border*/
     bottom: -30px;
     z-index: -1;
     -webkit-transform: skewY(-20deg);
     transform: skewY(-20deg);
-    background-color: #bbb;
-    border-bottom: 1px solid #bbb;
-    border-left: 1px solid #bbb;
+    background-color: var(--flagsColor);
+    border-bottom: var(--flagsBorderSize) solid var(--flagsBorderColor);
+    border-left: var(--flagsBorderSize) solid var(--flagsBorderColor);
+    box-shadow: var(--flagsShadowColor);
 }
 
 .mainFlag:after {
     content: "";
     position: absolute;
     height: 50%;
-    width: 52%;
-    right: -1px;
+    width: 53%;
+    right: calc(var(--flagsBorderSize) * -1);
     /*width of border*/
     bottom: -30px;
     z-index: -1;
     -webkit-transform: skewY(20deg);
     transform: skewY(20deg);
-    background-color: #bbb;
-    border-bottom: 1px solid #bbb;
-    border-right: 1px solid #bbb;
+    background-color: var(--flagsColor);
+    border-bottom: var(--flagsBorderSize) solid var(--flagsBorderColor);
+    border-right: var(--flagsBorderSize) solid var(--flagsBorderColor);
+    box-shadow: var(--flagsShadowColor);
 }
 
 .mainFlag:hover {
     /*height: 200px;*/
-    height: 250px;
+    height: 200px;
     animation-name: flagAnimation;
     animation-duration: 0.5s;
+}
+
+.normal {
+    --flagsColor: rgb(111, 111, 111) !important;
+}
+
+.unlocked {
+    --flagsShadowColor: 0px 0px 10px 1px rgb(251, 73, 2, 0.4);
+    --flagsColor: rgb(251, 73, 2) !important;
+}
+
+.advanced {
+    --flagsShadowColor: 0px 0px 10px 1px rgb(41, 129, 211, 0.4);
+    --flagsColor: rgb(41, 129, 211) !important;
+}
+
+.maxed {
+    --flagsShadowColor: 0px 0px 10px 1px rgb(188, 0, 175, 0.4);
+    --flagsColor: rgb(188, 0, 175) !important;
 }
 
 @keyframes flagAnimation {
@@ -66,13 +93,13 @@
     }
 
     to {
-        height: 250px;
+        height: 200px;
     }
 }
 
 @keyframes flagAnimationReverse {
     from {
-        height: 250px;
+        height: 200px;
     }
 
     to {
